fleet-mngmt/client-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fleetmngmt-web
  labels:
    component: web
spec:
  containers:
    - name: web
      image: richardchesterwood/k8s-fleetman-webapp-angular:release0
