fleet-mngmt/client-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetmngmt-web-nodeport
spec:
  selector:
    component: web
  ports:
    - name: http
      port: 80
      nodePort: 30080
  type: NodePort
