fleet-mngmt/ingress-private.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: "https://auth.fleetman.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.fleetman.com/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
  name: ingress-private
spec:
  tls:
  - hosts:
    - my.fleetman.com
    secretName: fleetman-tls
  rules:
    - host: my.fleetman.com
      http:
        paths:
        - path: /
          backend:
            serviceName: fleetman-webapp
            servicePort: 80

    # - host: queue.fleetman.com
    #   http:
    #     paths:
    #       - path: /
    #         backend:
    #           serviceName: fleetman-queue
    #           servicePort: 8161
