fleet-mngmt/ingress-public.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-public
spec:
  rules:
    - host: public.fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              servicePort: 80

    # - host: queue.fleetman.com
    #   http:
    #     paths:
    #       - path: /
    #         backend:
    #           serviceName: fleetman-queue
    #           servicePort: 8161
